@@ -47,12 +47,9 @@ fi
 STDOUT_FILE=$LOGS_DIR/stdout.log
 
 LIB_DIR=$DEPLOY_DIR/lib
-#LIB_JARS=`ls $LIB_DIR|grep .jar|awk '{print "'$LIB_DIR'/"$0}'|tr "\n" ":"`
-LIB_JARS=`ls $LIB_DIR|grep apple-monitor|awk '{print "'$LIB_DIR'/"$0}'|tr "\n" ":"`
+LIB_JARS=`ls $LIB_DIR|grep .jar|awk '{print "'$LIB_DIR'/"$0}'|tr "\n" ":"`
 
 JAVA_OPTS=" -Djava.awt.headless=true -Djava.net.preferIPv4Stack=true "
-JAVA_OPTS="$JAVA_OPTS -Djava.ext.dirs=$LIB_DIR:$JAVA_HOME/jre/lib/ext "
-
 JAVA_DEBUG_OPTS=""
 if [ "$2" = "debug" ]; then
     JAVA_DEBUG_OPTS=" -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n "
